Update ressources.qrc, even though I don't think it is used.

--- a/ressources.qrc
+++ b/ressources.qrc
@@ -63,57 +63,6 @@
 		<file>run_environment/graphics/trackwidget/visible.png</file>
 		<file>run_environment/graphics/icon.png</file>
 		<file>run_environment/graphics/midieditor.png</file>
+		<file>run_environment/MidiEditor.icns</file>
 	</qresource>
 </RCC>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
